--- a/Project.ioc
+++ b/Project.ioc
@@ -1,40 +1,59 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=UART4_RX
+Dma.RequestsNb=1
+Dma.UART4_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART4_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_RX.0.Instance=DMA1_Stream2
+Dma.UART4_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART4_RX.0.Mode=DMA_CIRCULAR
+Dma.UART4_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_RX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.UART4_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SPI1
-Mcu.IP3=SYS
-Mcu.IP4=TIM6
-Mcu.IP5=UART7
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM6
+Mcu.IP6=UART4
+Mcu.IP7=UART7
+Mcu.IPNb=8
 Mcu.Name=STM32F427V(G-I)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PE12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PD7
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin10=PE7
+Mcu.Pin11=PE8
+Mcu.Pin12=PE12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PD7
+Mcu.Pin16=PB3
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PH0/OSC_IN
+Mcu.Pin20=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PC2
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PE7
-Mcu.Pin9=PE8
-Mcu.PinsNb=17
+Mcu.Pin5=PA0/WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F427VITx
 MxCube.Version=5.4.0
 MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -45,7 +64,16 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM6_DAC_IRQn=true\:2\:1\:true\:false\:true\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0/WKUP.GPIOParameters=GPIO_Label
+PA0/WKUP.GPIO_Label=FMU_UART4_TX
+PA0/WKUP.Mode=Asynchronous
+PA0/WKUP.Signal=UART4_TX
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=FMU_UART4_RX
+PA1.Mode=Asynchronous
+PA1.Signal=UART4_RX
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
@@ -64,6 +92,16 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB8.GPIOParameters=PinState,GPIO_Label
+PB8.GPIO_Label=FMU_I2C1_SCL
+PB8.Locked=true
+PB8.PinState=GPIO_PIN_SET
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=PinState,GPIO_Label
+PB9.GPIO_Label=FMU_I2C1_SDA
+PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PC13.GPIOParameters=PinState,GPIO_Label
 PC13.GPIO_Label=GYRO_CS
 PC13.Locked=true
@@ -136,7 +174,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART7_Init-UART7-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART7_Init-UART7-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -185,6 +223,9 @@ SPI1.VirtualType=VM_MASTER
 TIM6.IPParameters=Prescaler,Period
 TIM6.Period=1999
 TIM6.Prescaler=83
+UART4.BaudRate=9600
+UART4.IPParameters=VirtualMode,BaudRate
+UART4.VirtualMode=Asynchronous
 UART7.BaudRate=115200
 UART7.IPParameters=VirtualMode,BaudRate
 UART7.VirtualMode=Asynchronous
